# fastware

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  selfdoc.json
.github/workflows/: ci.yml
.rlsbl/: config.json  hashes.json  managed-files.json
.rlsbl/changes/: 0.1.0.md  0.2.0.jsonl  0.2.0.md  0.3.0.jsonl  0.3.0.md  0.3.1.jsonl  0.3.1.md  0.4.0.md  0.5.0.jsonl  0.5.0.md  unreleased.jsonl
.rlsbl/releases/: unreleased.toml  v0.2.0.toml  v0.3.1.toml
.selfdoc/: manifest.json
.selfdoc/hashes/: hashes.json
.strictcli/: schema.json
benchmarks/: README.md  bench_import.py  bench_serialization.py  bench_throughput.py
docs/: _CLAUDE.md  _README.md  api-auth.md  api-middleware.md  api-server.md  api-testing.md  api.md  cli-dev.md  cli-index.md  di-guide.md  extras.md  gen-index.md  index.md  migration-fastapi.md  quickstart.md  src-fastware-__main__.md  src-fastware-_assets.md  src-fastware-_fswrite.md  src-fastware-_scope.md  src-fastware-app.md  src-fastware-audit.md  src-fastware-auth.md  src-fastware-cli.md  src-fastware-config.md  src-fastware-dev.md  src-fastware-devconfig.md  src-fastware-di.md  src-fastware-error_log.md  src-fastware-features.md  src-fastware-logging.md  src-fastware-mcp.md  src-fastware-middleware.md  src-fastware-request.md  src-fastware-responses.md  src-fastware-routing.md  src-fastware-server.md  src-fastware-sse.md  src-fastware-supervise.md  src-fastware-tasks.md  src-fastware-testing.md  (+8 more)
src/fastware/: __init__.py  __main__.py  _assets.py  _fswrite.py  _scope.py  app.py  audit.py  auth.py  cli.py  config.py  dev.py  devconfig.py  di.py  error_log.py  features.py  (+13 more)
tests/: conftest.py  dev_fixture_apps.py  loop_probe_app.py  target_app_module.py  test_app_hardening.py  test_asgi.py  test_auth.py  test_build_headers.py  test_cache_headers.py  test_cli.py  test_clients.py  test_core.py  test_dev.py  test_dev_reachability.py  test_devconfig.py  test_di.py  test_docstrings.py  test_followup.py  test_fswrite.py  test_granian_embed_compat.py  test_import.py  test_instance_registry.py  test_method_dispatch.py  test_middleware.py  test_mount_and_disconnect.py  test_phase4.py  test_phase6.py  test_phase8.py  test_probe_health.py  test_public_api.py  test_request_json_as_msgspec.py  test_routing.py  test_scope.py  test_serve_background.py  test_server.py  test_server_api.py  test_service_worker.py  test_sse.py  test_stream_disconnect.py  test_supervise.py  (+2 more)
(+9 files in other folders)
