[project]
name = "fastware"
version = "0.3.1"
description = "A fast, batteries-included ASGI framework. The FastAPI alternative."
requires-python = ">=3.11"
dependencies = [
    "msgspec>=0.21.1",
    "granian>=2.7.4",
]
keywords = ["rlsbl"]

[project.optional-dependencies]
auth = ["pyjwt", "bcrypt"]
logging = ["structlog"]
dev = ["httpx>=0.28", "watchfiles", "websockets"]
testing = ["httpx>=0.28"]
mcp = ["mcp"]
pydantic = ["pydantic"]
all = [
    "fastware[auth]",
    "fastware[logging]",
    "fastware[dev]",
    "fastware[testing]",
    "fastware[mcp]",
    "fastware[pydantic]",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx>=0.28",
    "pyjwt",
    "bcrypt",
    "structlog",
    "watchfiles",
    "websockets",
    "mcp",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastware"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
